# wstack

./: LICENSE_OTHERS  README.md  README.rst  setup.cfg  setup.py  tox.ini
git-hooks/: pre-commit
samples/: hello_world.json  hello_world.py  hello_world_auth.json
samples/auth/: http_basic.py
samples/middleware/: http_basic.py
tests/: hello_world.py
wstack/: __main__.py  webapp.py  webstack.py  wsgi.py
wstack/cli/: input.py  options.py
wstack/commands/: appspec.py
wstack/kua/: README.MD
