[metadata]
name = wstack
url = https://github.com/CCSGroupInternational/wstack
author = João Pinto
author_email = jpinto@ccsint.eu
summary = Merge mutiple WSGI applications and middleware into a single WSGI application
version = attr: wstack.version
description = Plugin-driven engine for data collecting, analyzing and reporting
long_description = file: README.rst
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
install_requires =
    click

[options.package_data]
* = *.txt, *.rst
hello = *.msg

